--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "sv"
-version = "0.2.2"
-description = "A Rust library for working with Bitcoin SV"
-repository = "https://github.com/brentongunning/rust-sv"
-authors = ["Brenton Gunning <brentongunning@gmail.com>"]
-keywords = ["bitcoin", "sv", "cash", "crypto"]
+version = "0.2.3"
+description = "A Rust library for working with the BSV blockchain."
+repository = "https://github.com/murphsicles/rust-sv"
+authors = ["Dr. Roy Murphy"]
 license = "MIT"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 byteorder = "1.2"
@@ -19,7 +18,7 @@ murmur3 = "0.4"
 num-bigint = "0.2"
 num-traits = "0.2"
 rand = "0.5"
-ring = "0.14"
+ring = "0.17.8"
 ripemd160 = "0.7"
 rust-base58 = "0.0"
 rust-crypto = "0.2"
