--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.3.0"
 description = "A Rust library for working with the BSV blockchain."
 repository = "https://github.com/murphsicles/rust-sv"
 authors = ["Dr. Roy Murphy"]
+keywords = ["bitcoin", "sv", "cash", "crypto"]
 license = "MIT"
 edition = "2021"
 
@@ -17,14 +18,16 @@ log = { version = "0.4.27", features = ["max_level_trace", "release_max_level_wa
 murmur3 = "0.5.2"
 num-bigint = "0.4.6"
 num-traits = "0.2.19"
-rand = "0.9.1"
-ring = "0.17.14"
+rand = "0.8"
+ring = "0.17.8"
 ripemd160 = "0.10.0"
-rust-base58 = "0.0.4"
-rust-crypto = "0.2.36"
+bs58 = "0.5" # Replace rust-base58
 secp256k1 = "0.31.0"
 snowflake = "1.3.0"
 
+[dev-dependencies]
+pretty_assertions = "1.4"
+
 [profile.release]
-opt-level = "s"     # Optimize for size over speed
-lto = true          # Enable link-time optimizations to shrink binary
+opt-level = "s"
+lto = true
