--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "sv"
-version = "0.3.0"
+version = "0.4.0"
 description = "A Rust library for working with the BSV blockchain."
 repository = "https://github.com/murphsicles/rust-sv"
-authors = ["Dr. Roy Murphy"]
+authors = ["Dr. Roy Murphy", "Brenton Gunning"]
 keywords = ["bitcoin", "sv", "cash", "crypto"]
 license = "MIT"
 edition = "2021"
