--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rand = "0.9.1"
 ring = "0.17.14"
 ripemd160 = "0.10.0"
 secp256k1 = "0.31.0"
+secp256k1-sys = "0.11"
 snowflake = "1.3.0"
 
 [dev-dependencies]
