--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ num-bigint = "0.4.6"
 num-traits = "0.2.19"
 rand = "0.9.1"
 ring = "0.17.14"
-ripemd160 = "0.10.0"
+ripemd160 = "0.10.0" # Ensure RIPEMD160 dependency
 secp256k1 = "0.31.0"
 secp256k1-sys = "0.11"
 snowflake = "1.3.0"
