--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ num-traits = "0.2.19"
 rand = "0.9.1"
 ring = "0.17.14"
 ripemd = "0.1.3"
-secp256k1 = "0.31.0"
+secp256k1 = { version = "0.31", features = ["rand", "global-context"] }
 secp256k1-sys = "0.11"
 snowflake = "1.3.0"
 
