--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,34 +2,34 @@
 name = "sv"
 version = "0.4.0"
 description = "A Rust library for working with the BSV blockchain."
-repository = "https://github.com/murphsicles/rust-sv"
+repository = "https://github.com/murphslices/rust-sv5"
 authors = ["Dr. Roy Murphy", "Brenton Gunning"]
 keywords = ["bitcoin", "sv", "cash", "crypto"]
 license = "MIT"
 edition = "2021"
 
 [dependencies]
-base58 = "0.2"
+base58 = "0.2.0"
 byteorder = "1.5.0"
 digest = "0.10.7"
 dns-lookup = "2.0.4"
 hex = "0.4.3"
-hmac = "0.12"
+hmac = "0.12.1"
 linked-hash-map = "0.5.6"
-log = { version = "0.4.27", features = ["max_level_trace", "release_max_level_warn"] }
+log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_warn"] }
 murmur3 = "0.5.2"
 num-bigint = "0.4.6"
 num-traits = "0.2.19"
-rand = "0.9.1"
-ring = "0.17.14"
+rand = "0.8.5"
+ring = "0.17.8"
 ripemd = "0.1.3"
-secp256k1 = { version = "0.31", features = ["rand", "global-context"] }
-secp256k1-sys = "0.11"
-sha2 = "0.10"
+secp256k1 = { version = "0.29.1", features = ["rand", "global-context"] }
+secp256k1-sys = "0.10.1"
+sha2 = "0.10.8"
 snowflake = "1.3.0"
 
 [dev-dependencies]
-pretty_assertions = "1.4"
+pretty_assertions = "1.4.0"
 
 [profile.release]
 opt-level = "s"
