--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sv"
 version = "0.4.0"
 description = "A Rust library for working with the BSV blockchain."
-repository = "https://github.com/murphslices/rust-sv5"
+repository = "https://github.com/murphsicles/rust-sv"
 authors = ["Dr. Roy Murphy", "Brenton Gunning"]
 keywords = ["bitcoin", "sv", "cash", "crypto"]
 license = "MIT"
