Deriving Child Pairs works now, Introducing Extended Derivation Paths
rand = "0.8.5" needs to stay in this version for the moment to keep things working. - Introducing New Extended Derivation Paths Syntax Style

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "rustsv"
-version = "0.4.0"
+version = "0.4.2"
 description = "A Rust library for working with the BSV blockchain."
 repository = "https://github.com/murphsicles/rust-sv"
-authors = ["Dr. Roy Murphy", "Brenton Gunning"]
+authors = ["Brenton Gunning", "Dr. Roy Murphy", "-NИЖKY~"]
 keywords = ["bitcoin", "sv", "cash", "crypto"]
 license = "MIT"
 edition = "2021"
@@ -18,14 +18,19 @@ log = { version = "0.4.27", features = ["max_level_trace", "release_max_level_wa
 murmur3 = "0.5.2"
 num-bigint = "0.4.6"
 num-traits = "0.2.19"
-rand = "0.9.1"
+pbkdf2 = "0.12.2"
+rand = "0.8.5"
+regex = "1.11.1"
 ring = "0.17.14"
 ripemd = "0.1.3"
+ripemd160 = "0.10.0"
 secp256k1 = { version = "0.31.0", features = ["rand", "global-context"] }
 secp256k1-sys = "0.11.0"
+sha2 = "0.10.9"
 snowflake = "1.3.0"
 
 [dev-dependencies]
+bsv = "2.1.1"
 pretty_assertions = "1.4.0"
 
 [profile.release]
